--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    {% for product in object_list %}
+        <div class="product">
+            <h3>{{ product.name }}</h3>
+            <img src="media/{{ product.image }}" alt="product_img">
+            <p>{{ product.description }}</p>
+            {% if product.available %}
+                <p>Price: {{ product.price }} $</p>
+                <p>Qty.: {{ product.available }}</p>
+            {% else %}
+            <p>Not available for order</p>
+            {% endif %}
+            {% if user.is_authenticated %}
+                {% if user.is_superuser %}
+                    <a href="{% url 'product_update' product.id %}">Update</a>
+                {% else %}
+                    {% if  product.quantity %}
+                    <form action="{% url 'purchase_add' product.id %}" method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" ><span>Buy</span></button>
+                    </form>
+                    {% endif %}
+                {% endif %}
+            {% endif %}
+        </div>
+    {% endfor %}
+{% endblock %}
+
+
+
