--- a/myapp/templates/return.html
+++ b/myapp/templates/return.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'myapp/base.html' %}
+{% block title %}Returns{% endblock %}
+{% block content %}
+    <div class="list">
+    <h2>Returns</h2>
+    {% for return in  object_list %}
+        <div>
+            <span>ID: {{ return.id }}</span>
+            <span>Date: {{ return.date }}</span>
+            <span>Product: {{ return }} {{ return.purchase.product.description }}</span>
+            <span>Refund amount: {{ return.purchase.purchase_amount }} $</span>
+            {% if user.is_superuser %}
+                <span>Customer: {{ return.purchase.client }}</span>
+                <form action="{% url 'return_del' return.id %}" method="post">
+                    {% csrf_token %}
+                    <button class="reject" type="submit">Reject</button>
+                </form>
+                <form action="{% url 'purchase_del' return.purchase.id %}" method="post">
+                    {% csrf_token %}
+                    <button class="confirm" type="submit"><span>Confirm</span></button>
+                </form>
+            {% endif %}
+        </div>
+    {% endfor %}
+    </div>
+{% endblock %}
