--- a/myapp/templates/include/main.html
+++ b/myapp/templates/include/main.html
@@ -14,7 +14,7 @@
         <a href="{% url 'purchases' %}">My Purchases</a>
         <a href="{% url 'returns' %}">My Returns</a>
         <a href="{% url 'logout' %}">log out</a>
-        <p>Cash {{ user.cash }} $</p>
+        <p>Cash {{ user.cash }} UAH</p>
     {% endif %}
 {% endif %}
 </div>
