--- a/myapp/templates/product.html
+++ b/myapp/templates/product.html
@@ -1,4 +1,4 @@
-{% extends 'myapp/base.html' %}
+{% extends 'base.html' %}
 {% block title %}Create product{% endblock %}
 {% block content %}
     <div class="main_form">
