--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -4,6 +4,63 @@
     <meta charset="UTF-8">
     {% load static %}
     <title>My Shop</title>
+    <style>
+      body {
+        margin: 0;
+    }
+      .main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #103c28;
+        color: #ffff;
+        font-family: Play, sans-serif;
+        font-size: 18px;
+        width: 100%;
+        height: 50px;
+        margin: 0 0 15px 0;
+    }
+
+      .main > a {
+        color: #ffff;
+        text-decoration: none;
+        width: 10%;
+        margin: 10px;
+        padding: 5px;
+    }
+
+      .main > a:hover{
+        font-size: 20px;
+    }
+
+      .main > p {
+        font-size: 14px;
+        padding: 5px;
+    }
+
+      .product {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        background: #effff5;
+        margin: 20px;
+        padding: 15px;
+        width: 25%;
+        box-shadow: 0 0 5px #4c4c4f;
+        border-radius: 5px;
+        font-family: Play, sans-serif;
+    }
+
+      .product:hover {
+         box-shadow: 0 0 15px #103c28;
+    }
+
+      .product > img {
+        border-radius: 10px;
+        width: 90%;
+    }
+
+    </style>
 </head>
 <body>
     {% include 'include/main.html' %}
