--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -6,23 +6,25 @@
     <title>My Shop</title>
     <style>
       body {
-        margin: 0;
+       margin: 0;
+       background: #e2eafa;
     }
+
       .main {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        background: #103c28;
+        background: #ddc0d8;
         color: #ffff;
         font-family: Play, sans-serif;
         font-size: 18px;
         width: 100%;
-        height: 50px;
-        margin: 0 0 15px 0;
+        height: 60px;
+        margin: 0 0 50px 0;
     }
 
       .main > a {
-        color: #ffff;
+        color: black;
         text-decoration: none;
         width: 10%;
         margin: 10px;
@@ -30,11 +32,11 @@
     }
 
       .main > a:hover{
-        font-size: 20px;
+        font-size: 30px;
     }
 
       .main > p {
-        font-size: 14px;
+        font-size: 15px;
         padding: 5px;
     }
 
@@ -42,10 +44,10 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        background: #effff5;
-        margin: 20px;
-        padding: 15px;
-        width: 25%;
+        background: #c6d5f5;
+        margin: 70px;
+        padding: 25px;
+        width: 35%;
         box-shadow: 0 0 5px #4c4c4f;
         border-radius: 5px;
         font-family: Play, sans-serif;
